--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,14 +13,14 @@ langchain = "~0.3.27"
 langchain-anthropic = "~0.3.19"
 langchain-huggingface = "~0.3.1"
 langchain-chroma = "~0.2.5"
-langchain-pinecone = "~0.2.11"
+langchain-pinecone = "^0.2.12"
 langchain-community = "~0.3.29"
 pydantic-settings = "^2.10.1"
 fastapi = {extras = ["standard"], version = "^0.116.1"}
 uvicorn = {extras = ["standard"], version = "^0.35.0"}
 pydantic = "^2.11.7"
 langchain-openai = "~0.3.32"
-lib-utils = {git = "https://github.com/JurisPeru/lib-utils.git", rev = "v0.1.1"}
+lib-utils = {git = "https://github.com/JurisPeru/lib-utils.git", rev = "v0.1.2"}
 
 [tool.poetry.group.dev.dependencies]
 pytest = "~8.4.1"
